[package]
name = "quat"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["quat", "quaternion"]
description = "rust quaternion functions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-quat.git"
homepage = "https://github.com/nathanfaucett/rs-quat"

[dependencies]
num = { git = "https://github.com/nathanfaucett/rs-num.git" }
signed = { git = "https://github.com/nathanfaucett/rs-signed.git" }
vec4 = { git = "https://github.com/nathanfaucett/rs-vec4.git" }
